feat: adding connections

--- a/wwwroot/appsettings.json
+++ b/wwwroot/appsettings.json
@@ -1,3 +1,4 @@
 {
-    "HelloMessage": "Hello from appsettings.json"
+  "HelloMessage": "Hello from appsettings.json",
+  "ApiUrl": "https://api.escuelajs.co/api/"
 }
