feat: adding models, services and using API.

--- a/wwwroot/appsettings.json
+++ b/wwwroot/appsettings.json
@@ -1,4 +1,4 @@
 {
   "HelloMessage": "Hello from appsettings.json",
-  "ApiUrl": "https://api.escuelajs.co/api/"
+  "ApiUrl": "https://api.escuelajs.co/api/v1/"
 }
